--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
 <div>你選到的酒是:</div>
 <div>{{item}}</div>
 
-<!-- <app-store></app-store> -->
+
+<app-store></app-store>
+
+
 <app-self></app-self>
 <app-self-no-data></app-self-no-data>
 <app-skip-self></app-skip-self>
