--- a/src/app/component/store/store.component.html
+++ b/src/app/component/store/store.component.html
@@ -1,3 +1,6 @@
 <div>StoreComponent:</div>
 <div>你選到的酒是:</div>
 <div>{{alcohol.item}}</div>
+<div></div>
+<div>您選到的食物是:</div>
+<div>{{food.item}}</div>
